--- a/drivers/net/ethernet/realtek/r8168/Makefile
+++ b/drivers/net/ethernet/realtek/r8168/Makefile
@@ -33,8 +33,8 @@
 obj-$(CONFIG_R8168) += r8168.o
 r8168-objs :=  r8168_n.o r8168_asf.o rtl_eeprom.o rtltool.o
 
-# From Loongson platform
-EXTRA_CFLAGS += -DENABLE_S5WOL -DCONFIG_SOC_LAN
+# Default features
+EXTRA_CFLAGS += -DCONFIG_ASPM -DENABLE_S5WOL -DCONFIG_R8168_NAPI -DCONFIG_R8168_VLAN
 
-# Ship same features as Arch Linux does
-EXTRA_CFLAGS += -DCONFIG_R8168_NAPI -DCONFIG_R8168_VLAN
+# From Loongson platform
+EXTRA_CFLAGS += -DCONFIG_SOC_LAN
